--- a/less/navigation.less
+++ b/less/navigation.less
@@ -23,7 +23,8 @@ h1{
 
 nav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: stretch;
     
     width: 40%;
 
@@ -33,6 +34,8 @@ nav{
     
 }
 nav a{
+    display: block;
+    text-align: center;
     width: 100%;
     font-size: 2rem;
     color: @nav-font;
